branding cleanup changes

--- a/airbyte-webapp/src/components/connection/ConnectionOnboarding/ConnectionOnboarding.module.scss
+++ b/airbyte-webapp/src/components/connection/ConnectionOnboarding/ConnectionOnboarding.module.scss
@@ -66,8 +66,24 @@
   height: 38px;
 }
 
+.connectorIcon1 {
+  width: 38px;
+  height: 38px;
+  margin: 15px;
+}
+
 .moreIcon {
   color: colors.$blue;
+  margin-left: 18px;
+  margin-top: 15px;
+}
+
+.moreIcon1 {
+  width: 38px;
+  height: 38px;
+  color: colors.$blue;
+  margin-left: 18px;
+  margin-top: 26px;
 }
 
 .demoLink {
